src/objects/ExchangeRate__c.object
<CustomObject>
    <fields>
        <fullName>FromCurrency__c</fullName>
        <label>変換元通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                    <label>USD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RateDate__c</fullName>
        <label>レート日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>レート</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToCurrency__c</fullName>
        <label>変更先通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JPY</fullName>
                    <default>true</default>
                    <label>JPY</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>為替レート</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rate__c</columns>
        <columns>RateDate__c</columns>
        <columns>FromCurrency__c</columns>
        <columns>ToCurrency__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>為替レート名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>